--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -1,6 +1,3 @@
-/*precss syntax */
-$blue: #056ef0;
-
 /* cssnext syntax */
 :root {
   --color-black: rgb(0,0,0);
@@ -10,8 +7,7 @@ $blue: #056ef0;
 .container {
 	display: flex;
 	flex-direction: column;
-	/*color: var(--color-blue);*/
-	color: $blue;
+	color: var(--color-blue);
 
 	& .greeting {
 		color: var(--color-black);
