Styles for header component

--- a/src/components/Common/Header/header.css
+++ b/src/components/Common/Header/header.css
@@ -1,4 +1,17 @@
 .header {
-	text-align: center;
-	color: red;
+	display: flex;
+	justify-content: space-between;
+	margin: 20px;
+}
+
+.title {
+	font-family: arial;
+}
+
+.nav {
+	display: flex;
+}
+
+.nav-item {
+	margin-left: 10px; 
 }
