--- a/src/components/Common/Footer/footer.css
+++ b/src/components/Common/Footer/footer.css
@@ -1,3 +1,5 @@
+@import "../../../../styles/constants.css";
+
 .footer {
 	display: flex;
 	justify-content: space-between;
@@ -5,31 +7,34 @@
 }
 
 .title {
-	font-family: arial;
+	font-family: var(--brandFont-arial);
 }
 
 .nav {
+	width: 33%;
 	display: flex;
 	align-items: center;
 	font-family: arial;
 }
 
 .nav-item {
-	color: black;
+	color: var(--brandColor-black);
 	margin-right: 10px;
 	text-decoration: none;
 }
 
 .nav-item:hover 
 {
-	color: #32c7ff;
+	color: var(--brandColor-lightBlue);
 	text-decoration: none;
 	cursor: pointer;
 }
 
 .social {
+	width: 33%;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 }
 
 .social div {
@@ -47,7 +52,7 @@
 
 .facebook:hover {
 	border-radius: 50%;
-	background-color: #0072b1;
+	background-color: var(--brandColor-facebook);
 }
 
 .linkedin {
@@ -56,7 +61,7 @@
 
 .linkedin:hover {
 	border-radius: 50%;
-	background-color: #0976B4;
+	background-color: var(--brandColor-linkedIn);
 }
 
 .skype {
@@ -65,7 +70,7 @@
 
 .skype:hover {
 	border-radius: 50%;
-	background-color: #34b7f1;
+	background-color: var(--brandColor-skype);
 }
 
 .github {
@@ -74,10 +79,12 @@
 
 .github:hover {
 	border-radius: 50%;
-	background-color: lightgray;
+	background-color: var(--brandColor-lightGray);
 }
 
 .copyright {
+	width: 33%;
 	display: flex;
 	align-items: center;
+	justify-content: flex-end;
 }
